--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -47,3 +47,9 @@
 .today-card.amended-card {
     box-shadow: inset 0 0 0 2px rgba(255, 159, 64, 0.63);
 }
+
+/* Highlight the current logged-in user's name in schedule grids */
+.schedule-name-current {
+    font-weight: 700;
+    color: rgb(0, 126, 255);
+}
